Fix some spacing issues

--- a/app/components/work_packages/date_picker/dialog_content_component.sass
+++ b/app/components/work_packages/date_picker/dialog_content_component.sass
@@ -2,8 +2,8 @@
   .wp-datepicker-dialog
     &--body
       // We set a fixed height for this dialog zo avoid that it jumps around when the tabs are switched or errors shown
-      min-height: 525px
-      min-width: 600px
+      min-height: 490px
+      width: 600px
 
 @media screen and (max-width: $breakpoint-sm)
   .wp-datepicker-dialog
